# asotia

./: .env  .env.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_asotia_foodshop.md  daily.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  remove-extensions.txt
apps/accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/cart/: cart.py  tests.py  urls.py  views.py
apps/catalog/: admin.py  models.py  tests.py  urls.py  views.py
apps/orders/: admin.py  forms.py  models.py  notifications.py  services.py  tests.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  (+1 more)
apps/pages/: tests.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
scripts/: build_truth.py
static/css/: site.css
static/js/: site.js
templates/: base.html
templates/accounts/: cabinet.html  login.html  profile_edit.html  register.html
templates/cart/: detail.html
templates/catalog/: _category_product.html  _product_card.html  category.html  index.html  product_detail.html
templates/orders/: checkout.html  success.html
templates/pages/: home.html  simple.html
truth_parts/: 00_index.md  01_project_mvp.md  02_stack_dependencies.md  03_architecture_apps_urls.md  04_database_models.md  05_django_settings.md  06_local_dev_env.md  07_devops_production.md  08_security_backup.md  09_admin_orders_notifications.md  10_code_git_limits.md  CLAUDE.md
truth_parts/help_files/: daily.md  установка всего
(+8 files in other folders)
