[tool.poetry]
name = "asoti-foodshop"
version = "0.1.0"
description = "Asoti Food Shop"
authors = ["Asoti"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
psycopg2-binary = "^2.9"
pillow = "^10.0"
django-environ = "^0.11"
gunicorn = "^21.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "*"
pytest = "*"
pytest-django = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]